--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <container>
       <header>
         <nav class="menu">
-          <img src="./assets/Logo.svg" class="logo" />
+          <img
+            src="https://gist.githack.com/ManojSreekumarK/da550966eb2364cc2de92b8522d1b00c/raw/c019776a8c70b7326e24d6db92b64195c153e818/logo.svg"
+            class="logo"
+          />
           <div class="hamburger">
             <div class="line"></div>
             <div class="line"></div>
@@ -45,7 +48,9 @@
             <button>Get Started</button>
             <button>Learn More</button>
           </div>
-          <img src="assets/Illustration.svg" />
+          <img
+            src="https://gist.githack.com/ManojSreekumarK/76aebb4f91aa40ba676e1b9156578b09/raw/db37e0cfae6c9e5cbe8dd27baa78edf39404d403/illustration.svg"
+          />
         </section>
       </header>
       <section id="Services" class="Services">
@@ -56,16 +61,22 @@
           </div>
           <div class="holder-steps">
             <div>
-              <img src="./assets/Call.svg" />
+              <img
+                src="https://gist.githack.com/ManojSreekumarK/7a2859a4da562160ca3980777e299fca/raw/8db8692d3ad096c9b47c36a52df946867c7e2ead/call.svg"
+              />
 
               <p>Call for appointment</p>
             </div>
             <div>
-              <img src="./assets/Calender.svg" />
+              <img
+                src="https://gist.githack.com/ManojSreekumarK/51fdf6e402229539f2ef3a61b91b8d44/raw/c43d418e372300757e558e1da33a8fb4287ab6ba/calender.svg"
+              />
               <p>Get a Date & Serial</p>
             </div>
             <div>
-              <img src="./assets/Doctor Consult.svg" />
+              <img
+                src="https://gist.githack.com/ManojSreekumarK/3f8b39f7e74d7a04e8c11fba26d7b6be/raw/ff6141375fee7db9f29b7af2d2bc7b32d00a6947/doctor%20Consult.svg"
+              />
               <p>Consult Your dentist</p>
             </div>
           </div>
@@ -77,7 +88,9 @@
               <h2>Whenever Its Possible</h2>
             </div>
             <hr />
-            <img src="./assets/Image.svg" />
+            <img
+              src="https://gist.githack.com/ManojSreekumarK/32531d2d0a021ddf1d826fe946aa53d0/raw/c6c51863a29e07820e54c64dce81e7a68686ea8c/image.svg"
+            />
           </div>
           <div class="service-content">
             <p>
@@ -91,37 +104,53 @@
               <div class="list">
                 <ul>
                   <li>
-                    <img src="./assets/Shield.svg" />
+                    <img
+                      src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                    />
                     <span>Check ups</span>
                   </li>
                   <li>
-                    <img src="./assets/Shield.svg" />
+                    <img
+                      src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                    />
                     <span>Cosmetic dentistry</span>
                   </li>
                   <li>
-                    <img src="./assets/Shield.svg" />
+                    <img
+                      src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                    />
                     <span>Orthodontics</span>
                   </li>
                   <li>
-                    <img src="./assets/Shield.svg" />
+                    <img
+                      src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                    />
                     <span>Preventative checks</span>
                   </li>
                 </ul>
                 <ul>
                   <li>
-                    <img src="./assets/Shield.svg" />
+                    <img
+                      src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                    />
                     <span>Emergencies</span>
                   </li>
                   <li>
-                    <img src="./assets/Shield.svg" />
+                    <img
+                      src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                    />
                     <span>Dental implants</span>
                   </li>
                   <li>
-                    <img src="./assets/Shield.svg" />
+                    <img
+                      src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                    />
                     <span>Children's dentistry</span>
                   </li>
                   <li>
-                    <img src="./assets/Shield.svg" />
+                    <img
+                      src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                    />
                     <span>Telephone consultations</span>
                   </li>
                 </ul>
@@ -139,7 +168,9 @@
         <div class="features-list">
           <div class="toprow">
             <div>
-              <img src="./assets/Group1.svg" />
+              <img
+                src="https://gist.githack.com/ManojSreekumarK/210b86119a3b7be475a9c01b168c8524/raw/f1c3ba90c42f62a62355bb28ac0231398944dec4/group1.svg"
+              />
               <h6>Laser Technology</h6>
               <p>
                 Worlds most advanced Diode Laser.Your treatment experience will
@@ -148,7 +179,9 @@
             </div>
             <hr />
             <div>
-              <img src="./assets/group2.svg" />
+              <img
+                src="https://gist.githack.com/ManojSreekumarK/a3c3dbaf3d20cd412e4da00318fa8992/raw/406110977fabffaa376500cdc034d31a83d72376/group2.svg"
+              />
               <h6>Painless Injection</h6>
               <p>
                 Only dental clinic in New York, USA utilising Painless Injection
@@ -157,7 +190,9 @@
             </div>
             <hr />
             <div>
-              <img src="./assets/Group3 (2).svg" />
+              <img
+                src="https://gist.githack.com/ManojSreekumarK/f0c8c935c98857038f429c5a2ddbdc04/raw/dbc30621f55adc7041dc0bae73cd021d0418d1d4/group3.svg"
+              />
               <h6>Dental Implant</h6>
               <p>
                 30+ years of experience in Dental Implant with specialist care.
@@ -168,7 +203,9 @@
           <hr />
           <div class="botmrow">
             <div>
-              <img src="./assets/group4 (2).svg" />
+              <img
+                src="https://gist.githack.com/ManojSreekumarK/77993d57009663fe73416dd649ac771c/raw/71153e142015e4832c2618ef7f6b081f68b9c2a4/group4.svg"
+              />
               <h6>3D Dental Scanner</h6>
               <p>
                 One of the world’s most advanced 3D Dental Scanner with auto
@@ -177,7 +214,9 @@
             </div>
             <hr />
             <div>
-              <img src="./assets/group5 (2).svg" />
+              <img
+                src="https://gist.githack.com/ManojSreekumarK/199c017aa2895247065618798ef48f47/raw/bbe4d1fd23765cb03b9da383405dc5ca8f71da68/group5.svg"
+              />
               <h6>Digital Smile Design</h6>
               <p>
                 We help to re-design your smile and shape your teeth to create a
@@ -186,7 +225,9 @@
             </div>
             <hr />
             <div>
-              <img src="./assets/group6.svg" />
+              <img
+                src="https://gist.githack.com/ManojSreekumarK/ba7500da23bbeb8f5f7b5dfde8125957/raw/4a48580017186c95d5dea276209425e53758902b/group6.svg"
+              />
               <h6>Crown and Bridge</h6>
               <p>
                 Transform you blackish gum to pinkish colour with painless,
@@ -207,7 +248,9 @@
           </p>
         </div>
         <img
-          src="./assets/white-world-map-on-blue-background-vector-4184907-removebg-preview.png"
+          src="https://i.ibb.co/fnL8JYw/white-world-map-on-blue-background-vector-4184907-removebg-preview.png"
+          alt="white-world-map-on-blue-background-vector-4184907-removebg-preview"
+          border="0"
         />
         <a href="#appointment"><button>Make An Appointment</button></a>
       </section>
@@ -218,7 +261,9 @@
         </div>
         <hr />
         <div class="about-content">
-          <img src="./assets/Image (1).svg" />
+          <img
+            src="https://gist.githack.com/ManojSreekumarK/129548384131d3d96c5c561ec3228770/raw/8e19672e8e09672027592c8062adf475c5553127/image1.svg"
+          />
           <div>
             <h5>Our History</h5>
             <p>
@@ -239,7 +284,10 @@
         </div>
         <div class="team-card">
           <div class="card">
-            <img src="./assets/Doctor01.svg" alt="Card image" />
+            <img
+              src="https://gist.githack.com/ManojSreekumarK/809e72ea34f49e5e4481c8a96030f8ee/raw/24214efdf794a19f796539935d4c2916117cb3bd/Doctor1.svg"
+              alt="Card image"
+            />
             <div class="card-body">
               <h5 class="card-title">Dr. Jeanette Hoff</h5>
               <p class="card-text">Orthodontic Treatment</p>
@@ -248,7 +296,10 @@
             </div>
           </div>
           <div class="card">
-            <img src="./assets/Doctor02.svg" alt="Card image" />
+            <img
+              src="https://gist.githack.com/ManojSreekumarK/21dabedbe9d23b6cf7e46b6ca722d192/raw/b878f2a72f8746746d9b7f62b9032a8ce9c27ae2/Doctor2.svg"
+              alt="Card image"
+            />
             <div class="card-body">
               <h5 class="card-title">Dr. David Ambrose</h5>
               <p class="card-text">Orthodontic Treatment</p>
@@ -257,7 +308,10 @@
             </div>
           </div>
           <div class="card">
-            <img src="./assets/Doctor03.svg" alt="Card image" />
+            <img
+              src="https://gist.githack.com/ManojSreekumarK/8c9af3c83002b16a2828ad3b9abe2391/raw/fc7bf6a4abe6c88158e41fb75dee7904543613b0/Doctor3.svg"
+              alt="Card image"
+            />
             <div class="card-body">
               <h5 class="card-title">Dr. Jenelia Breton</h5>
               <p class="card-text">Orthodontic Treatment</p>
@@ -266,7 +320,10 @@
             </div>
           </div>
           <div class="card">
-            <img src="./assets/Doctor04.svg" alt="Card image" />
+            <img
+              src="https://gist.githack.com/ManojSreekumarK/a6be3ac4d99ba46a08469904fded168c/raw/9e6590c9183bcb37ce3881d4a9197fa3de05a53d/Doctor4.svg"
+              alt="Card image"
+            />
             <div class="card-body">
               <h5 class="card-title">Dr. Jagajeet Aurora</h5>
               <p class="card-text">Orthodontic Treatment</p>
@@ -277,11 +334,17 @@
         </div>
       </section>
       <article class="client">
-        <img class="imgc" src="./assets/Imageclient.svg" alt="" />
+        <img
+          class="imgc"
+          src="https://gist.githack.com/ManojSreekumarK/9bf007f2de89a43ef035c10a72aaaa99/raw/95f418c494987f5ff310ce0424cc849ad88bea98/imageclient.svg"
+          alt=""
+        />
         <div class="client-content">
           <hr />
           <h3>What our client says about us</h3>
-          <img src="./assets/Vector.svg" />
+          <img
+            src="https://gist.githack.com/ManojSreekumarK/aade68d7d02eb06168694f7fc48ef161/raw/0852c8d6bbb7116539ddd6492312682a40904003/vector.svg"
+          />
           <blockquote>
             I’ve seen a lot of Dentists over my lifetime because I’ve had some
             serious dental issues. But my highest praise goes to Dr. Jonathon
@@ -297,7 +360,9 @@
           <h2>Consult with our Doctor</h2>
         </div>
         <div class="appointment-content">
-          <img src="./assets/Imageappointmnt.svg" />
+          <img
+            src="https://gist.githack.com/ManojSreekumarK/3e4320900c2a46a4bde8ad77a5bdc120/raw/5f68cdf59dd17200a95afec2204e018a3b3c15ef/imageappointment.svg"
+          />
           <form>
             <div class="column">
               <div class="row">
@@ -371,7 +436,9 @@
       <footer>
         <div class="footer-top">
           <div>
-            <img src="./assets/Logosecond.svg" />
+            <img
+              src="https://gist.githack.com/ManojSreekumarK/059bae58be00f5c8b1762fc7987215d0/raw/ceb69aa9fa94a28f1268f9454b23aa970ea0adaf/logosecond.svg"
+            />
             <p>
               Dentics is a well-known name in dental and oral care in New York.
               The journey of this institution started in 1990
