--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               alt="Card image"
             />
             <div class="card-body">
-              <h5 class="card-title">Dr. Jagajeet Aurora</h5>
+              <h5 class="card-title">Dr. Jagajeet Amen</h5>
               <p class="card-text">Orthodontic Treatment</p>
               <p class="card-text">Harvard Medical School</p>
               <a href="#appointment" class="btn btn-primary">Appointment</a>
