--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <nav class="menu">
           <img
             src="https://gist.githack.com/ManojSreekumarK/da550966eb2364cc2de92b8522d1b00c/raw/c019776a8c70b7326e24d6db92b64195c153e818/logo.svg"
+            alt="Card image"
             class="logo"
           />
-          <div class="hamburger">
+          <div class="hamburger" id="hamburger">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -37,6 +38,17 @@
           </ul>
         </nav>
         <hr />
+        <div class="toggler" id="toggle">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#Services">Services</a></li>
+            <li><a href="#aboutus">About us</a></li>
+            <li><a href="#">Register</a></li>
+            <li>
+              <a href="#appointment"><button>Appointment</button></a>
+            </li>
+          </ul>
+        </div>
         <section class="hero-section">
           <div class="content">
             <h1>We Provide High</h1>
@@ -50,6 +62,7 @@
           </div>
           <img
             src="https://gist.githack.com/ManojSreekumarK/76aebb4f91aa40ba676e1b9156578b09/raw/db37e0cfae6c9e5cbe8dd27baa78edf39404d403/illustration.svg"
+            alt="Card image"
           />
         </section>
       </header>
@@ -63,6 +76,7 @@
             <div>
               <img
                 src="https://gist.githack.com/ManojSreekumarK/7a2859a4da562160ca3980777e299fca/raw/8db8692d3ad096c9b47c36a52df946867c7e2ead/call.svg"
+                alt="Card image"
               />
 
               <p>Call for appointment</p>
@@ -70,12 +84,14 @@
             <div>
               <img
                 src="https://gist.githack.com/ManojSreekumarK/51fdf6e402229539f2ef3a61b91b8d44/raw/c43d418e372300757e558e1da33a8fb4287ab6ba/calender.svg"
+                alt="Card image"
               />
               <p>Get a Date & Serial</p>
             </div>
             <div>
               <img
                 src="https://gist.githack.com/ManojSreekumarK/3f8b39f7e74d7a04e8c11fba26d7b6be/raw/ff6141375fee7db9f29b7af2d2bc7b32d00a6947/doctor%20Consult.svg"
+                alt="Card image"
               />
               <p>Consult Your dentist</p>
             </div>
@@ -90,6 +106,7 @@
             <hr />
             <img
               src="https://gist.githack.com/ManojSreekumarK/32531d2d0a021ddf1d826fe946aa53d0/raw/c6c51863a29e07820e54c64dce81e7a68686ea8c/image.svg"
+              alt="Card image"
             />
           </div>
           <div class="service-content">
@@ -106,24 +123,28 @@
                   <li>
                     <img
                       src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                      alt="Card image"
                     />
                     <span>Check ups</span>
                   </li>
                   <li>
                     <img
                       src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                      alt="Card image"
                     />
                     <span>Cosmetic dentistry</span>
                   </li>
                   <li>
                     <img
                       src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                      alt="Card image"
                     />
                     <span>Orthodontics</span>
                   </li>
                   <li>
                     <img
                       src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                      alt="Card image"
                     />
                     <span>Preventative checks</span>
                   </li>
@@ -132,24 +153,28 @@
                   <li>
                     <img
                       src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                      alt="Card image"
                     />
                     <span>Emergencies</span>
                   </li>
                   <li>
                     <img
                       src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                      alt="Card image"
                     />
                     <span>Dental implants</span>
                   </li>
                   <li>
                     <img
                       src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                      alt="Card image"
                     />
                     <span>Children's dentistry</span>
                   </li>
                   <li>
                     <img
                       src="https://gist.githack.com/ManojSreekumarK/c3a29bfad53765da2814052aaf0528b5/raw/ecf533a61838740f0951f3689146cdd984acace4/shield.svg"
+                      alt="Card image"
                     />
                     <span>Telephone consultations</span>
                   </li>
@@ -170,6 +195,7 @@
             <div>
               <img
                 src="https://gist.githack.com/ManojSreekumarK/210b86119a3b7be475a9c01b168c8524/raw/f1c3ba90c42f62a62355bb28ac0231398944dec4/group1.svg"
+                alt="Card image"
               />
               <h6>Laser Technology</h6>
               <p>
@@ -181,6 +207,7 @@
             <div>
               <img
                 src="https://gist.githack.com/ManojSreekumarK/a3c3dbaf3d20cd412e4da00318fa8992/raw/406110977fabffaa376500cdc034d31a83d72376/group2.svg"
+                alt="Card image"
               />
               <h6>Painless Injection</h6>
               <p>
@@ -192,6 +219,7 @@
             <div>
               <img
                 src="https://gist.githack.com/ManojSreekumarK/f0c8c935c98857038f429c5a2ddbdc04/raw/dbc30621f55adc7041dc0bae73cd021d0418d1d4/group3.svg"
+                alt="Card image"
               />
               <h6>Dental Implant</h6>
               <p>
@@ -205,6 +233,7 @@
             <div>
               <img
                 src="https://gist.githack.com/ManojSreekumarK/77993d57009663fe73416dd649ac771c/raw/71153e142015e4832c2618ef7f6b081f68b9c2a4/group4.svg"
+                alt="Card image"
               />
               <h6>3D Dental Scanner</h6>
               <p>
@@ -216,6 +245,7 @@
             <div>
               <img
                 src="https://gist.githack.com/ManojSreekumarK/199c017aa2895247065618798ef48f47/raw/bbe4d1fd23765cb03b9da383405dc5ca8f71da68/group5.svg"
+                alt="Card image"
               />
               <h6>Digital Smile Design</h6>
               <p>
@@ -227,6 +257,7 @@
             <div>
               <img
                 src="https://gist.githack.com/ManojSreekumarK/ba7500da23bbeb8f5f7b5dfde8125957/raw/4a48580017186c95d5dea276209425e53758902b/group6.svg"
+                alt="Card image"
               />
               <h6>Crown and Bridge</h6>
               <p>
@@ -250,7 +281,6 @@
         <img
           src="https://i.ibb.co/fnL8JYw/white-world-map-on-blue-background-vector-4184907-removebg-preview.png"
           alt="white-world-map-on-blue-background-vector-4184907-removebg-preview"
-          border="0"
         />
         <a href="#appointment"><button>Make An Appointment</button></a>
       </section>
@@ -263,6 +293,7 @@
         <div class="about-content">
           <img
             src="https://gist.githack.com/ManojSreekumarK/129548384131d3d96c5c561ec3228770/raw/8e19672e8e09672027592c8062adf475c5553127/image1.svg"
+            alt="Card image"
           />
           <div>
             <h5>Our History</h5>
@@ -344,6 +375,7 @@
           <h3>What our client says about us</h3>
           <img
             src="https://gist.githack.com/ManojSreekumarK/aade68d7d02eb06168694f7fc48ef161/raw/0852c8d6bbb7116539ddd6492312682a40904003/vector.svg"
+            alt="Card image"
           />
           <blockquote>
             I’ve seen a lot of Dentists over my lifetime because I’ve had some
@@ -362,6 +394,7 @@
         <div class="appointment-content">
           <img
             src="https://gist.githack.com/ManojSreekumarK/3e4320900c2a46a4bde8ad77a5bdc120/raw/5f68cdf59dd17200a95afec2204e018a3b3c15ef/imageappointment.svg"
+            alt="Card image"
           />
           <form>
             <div class="column">
@@ -415,13 +448,7 @@
       <section class="newsletter">
         <h2>Subscribe to our Newsletter</h2>
         <form>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            required
-            placeholder="Full Name"
-          />
+          <input type="text" name="name" required placeholder="Full Name" />
 
           <input
             type="email"
@@ -438,6 +465,7 @@
           <div>
             <img
               src="https://gist.githack.com/ManojSreekumarK/059bae58be00f5c8b1762fc7987215d0/raw/ceb69aa9fa94a28f1268f9454b23aa970ea0adaf/logosecond.svg"
+              alt="Card image"
             />
             <p>
               Dentics is a well-known name in dental and oral care in New York.
@@ -480,5 +508,21 @@
         </div>
       </footer>
     </container>
+    <script>
+      const hamburger = document.getElementById("hamburger");
+      const toggle = document.getElementById("toggle");
+
+      let check = false;
+      document.addEventListener("DOMContentLoaded", () => {
+        if (hamburger.style.display === "none") {
+          check = false;
+        }
+      });
+      hamburger.addEventListener("click", () => {
+        console.log("hey");
+        check = !check;
+        toggle.style.display = check ? "flex" : "none";
+      });
+    </script>
   </body>
 </html>
