--- a/index.html
+++ b/index.html
@@ -510,14 +510,20 @@
       <!-- Pop-up screen -->
       <div id="popup" class="popup">
         <p>Connect with me on:</p>
-        <a href="https://www.linkedin.com/" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/manoj-sreekumar-5a5118237/"
+          target="_blank"
           ><img
             src="https://gist.githack.com/ManojSreekumarK/609aaf0aa73518a97547f3f0251a0ed0/raw/dca6f5a047c2eb87c0904dde87fee97233613af8/in.svg"
           />
         </a>
-        <a href="https://github.com/" target="_blank"
+        <a href="https://github.com/ManojSreekumarK" target="_blank"
           ><img
             src="https://gist.githack.com/ManojSreekumarK/e72dd29218328928f1c2ed693d8381e6/raw/36bf440c693d342f1d5a416d628ee6280c98f2c1/git.svg"
+        /></a>
+        <a href="mailto:manojsreekumar2000@gmail.com" target="_blank"
+          ><img
+            src="https://gist.githack.com/ManojSreekumarK/7924aa8b52d6146d23a343267910c479/raw/b95a2794bc50d68324e9d2fbf58431f7bd0a3448/email.svg"
         /></a>
         <button id="close-btn">Close</button>
       </div>
