--- a/index.html
+++ b/index.html
@@ -521,7 +521,9 @@
           ><img
             src="https://gist.githack.com/ManojSreekumarK/e72dd29218328928f1c2ed693d8381e6/raw/36bf440c693d342f1d5a416d628ee6280c98f2c1/git.svg"
         /></a>
-        <a href="mailto:manojsreekumar2000@gmail.com" target="_blank"
+        <a
+          href="https://mail.google.com/mail/?view=cm&to=manojsreekumar2000@gmail.com"
+          target="_blank"
           ><img
             src="https://gist.githack.com/ManojSreekumarK/7924aa8b52d6146d23a343267910c479/raw/b95a2794bc50d68324e9d2fbf58431f7bd0a3448/email.svg"
         /></a>
